--- a/homework.html
+++ b/homework.html
@@ -13,19 +13,22 @@
             <p>Причем в атрибуте "data-message" может присутствовать специальные символы "%s", которые должны быть заменены на URL ссылки.</p>
             <p>У попапа должны быть две кнопки "Да" и "Нет". Первая осуществляет переход по URL ссылки, вторая закрывает попап (и удаляет его из DOM).</p>
             <p>Визуальные, функциональные и логические улучшения приветствуются!</p>
+            <!--<div class="popup-link"></div>-->
             <ul>
                 <li>
                     <a href="http://yandex.ru/" class="popup-link"
                         data-title="Переход на внешний ресурс"
-                        data-message="Вы уверены, что хотите перейти на '%s'?">Яндекс</a>
+                        data-message="Вы уверены, что хотите перейти по ссылке '%s'?">Яндекс</a>
                 </li>
                 <li>
                     <a href="http://google.com/" class="popup-link"
                         data-title="оу!"
                         data-message="А точно?">Гугл</a>
                 </li>
+
             </ul>
         </div>
+
         <script src="homework.js"></script>
     </body>
 </html>
